Fixed Splash Screen Alignment and Spinner

--- a/src/pages/PersonalDetails.css
+++ b/src/pages/PersonalDetails.css
@@ -54,7 +54,7 @@ html, body, #root, .homescreen {
 
 .location-title {
   margin-top: 16px;
-  font-size: 20px;
+  font-size: 25px;
   font-weight: bold;
   color: #000000 !important;
 }
